CLI Application that features:
* CSVReader
* Database importer
* Table scanner for Bong data records
* Rawdata producer
* Upload Avro files to GCS bucket
* Support NorgesGruppen Bonger